# maze2

./: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  test.py
mazegen/: __init__.py  a.maze.ing.py  mazegen.py
